syntax = "proto3";

package protos;

enum type {
  ORDERED_REQ = 0;
  ORDERED_LOG = 1;
}

// UI is a unique identifier assigned to a message by a USIG
message UI {
  // Unique, monotonic, and sequential counter
  uint64 counter = 1;
  // Certificate created by a tamper-proof component of the USIG
  // that certifies the counter assigned to a particular message
  bytes  cert = 2;
}

message ordered_msg {
  type type = 1;
  uint64 author = 2;
  string batch_hash = 3;
  UI UI = 4;
}

//
//// ordered request could be generated by the replicas in cluster
//// author:   the replica who generates current ordered request
//// req_hash: the hash of current request
//// sequence: the sequence number of current request
//// tx_list:  the txs current request contains
//message ordered_req {
//  string req_hash   = 1;
//  uint64 author     = 2;
//  uint64 counter    = 3;
//  string batch_hash = 4;
//  bytes  SGX_sig    = 5;
//}
//
//message ordered_log {
//  string log_hash   = 1;
//  uint64 author     = 2;
//  uint64 counter    = 3;
//  string batch_hash = 4;
//  bytes  SGX_sig    = 5;
//}
